fix(215): replace bootstrap class 'no-gutters' with 'g-0'

--- a/src/app/create-appointment/create-appointment.component.html
+++ b/src/app/create-appointment/create-appointment.component.html
@@ -16,7 +16,7 @@
       <div class="section-container w-100 p-4">
         <div [ngClass]="{'has-error': title.invalid  && (title.dirty || title.touched)}"
              class="form-group-divider form-group">
-          <div class="row no-gutters">
+          <div class="row g-0">
             <div class="col-auto d-flex justify-content-end align-items-center icon-frame">
               <img alt="key" class="icon m-2 mt-3 mt-lg-4" src="assets/title.svg">
             </div>
@@ -52,7 +52,7 @@
         </div>
         <div [ngClass]="{'has-error': name.invalid  && (name.dirty || name.touched)}"
              class="form-group-divider form-group">
-          <div class="row no-gutters">
+          <div class="row g-0">
             <div class="col-auto d-flex justify-content-end align-items-center icon-frame">
               <img alt="key" class="icon m-2 mt-3 mt-lg-4" src="assets/user.svg">
             </div>
@@ -95,7 +95,7 @@
         </div>
         <div [ngClass]="{'has-error': location.invalid  && (location.dirty || location.touched)}"
              class="form-group-divider form-group">
-          <div class="row no-gutters">
+          <div class="row g-0">
             <div class="col-auto d-flex justify-content-end align-items-center icon-frame">
               <img alt="Ort" class="icon m-2 mt-3 mt-lg-4" src="assets/location.svg">
             </div>
@@ -130,7 +130,7 @@
         </div>
         <div [ngClass]="{'has-error': description.invalid  && (description.dirty || description.touched)}"
              class="form-group-divider form-group">
-          <div class="row no-gutters">
+          <div class="row g-0">
             <div class="col-auto d-flex justify-content-end align-items-center icon-frame">
               <img alt="Sprechblase" class="icon m-2 mt-3 mt-lg-4" src="assets/description.svg">
             </div>
