--- a/src/app/password/password.component.html
+++ b/src/app/password/password.component.html
@@ -1,6 +1,6 @@
 <div class="row justify-content-center">
   <div class="col col-lg-10">
-    <div class="row no-gutters justify-content-between">
+    <div class="row g-0 justify-content-between">
       <div class="col">
         <img alt="Plane" data-id="planningLogo" src="assets/search.svg">
         <h3 class="text-center d-none d-lg-block" data-id="planningText">{{ 'home.planning' | translate }}</h3>
