--- a/src/app/shared/components/poll-options/poll-options.component.html
+++ b/src/app/shared/components/poll-options/poll-options.component.html
@@ -1,10 +1,10 @@
 <div
   *ngIf="formGroup !== null"
   [formGroup]="formGroup"
-  class="row no-gutters justify-content-end justify-content-lg-around align-items-center align-self-center max-content"
+  class="row g-0 justify-content-end justify-content-lg-around align-items-center align-self-center max-content"
 >
   <div class="col col-sm-auto">
-    <div class="row no-gutters justify-content-center min-content">
+    <div class="row g-0 justify-content-center min-content">
       <div class="col-auto">
         <label
           class="form-check-label"
@@ -33,7 +33,7 @@
     </div>
   </div>
   <div class="col col-sm-auto">
-    <div class="row no-gutters justify-content-center min-content">
+    <div class="row g-0 justify-content-center min-content">
       <div class="col-auto">
         <label
           class="w-100 form-check-label"
@@ -62,7 +62,7 @@
     </div>
   </div>
   <div class="col col-sm-auto">
-    <div class="row no-gutters justify-content-center min-content">
+    <div class="row g-0 justify-content-center min-content">
       <div class="col-auto">
         <label
           class="form-check-label"
