--- a/src/app/links/links.component.html
+++ b/src/app/links/links.component.html
@@ -17,7 +17,7 @@
         >
           {{ 'links.invite' | translate }}
         </div>
-        <div class="row no-gutters pb-1">
+        <div class="row g-0 pb-1">
           <div
             class="col text-danger text-bold my-1"
             data-id="inviteLinkWarning"
@@ -25,7 +25,7 @@
             {{ 'links.loosingLink' | translate }}
           </div>
         </div>
-        <div class="row no-gutters link-container justify-content-end align-items-center px-2 py-1">
+        <div class="row g-0 link-container justify-content-end align-items-center px-2 py-1">
           <div class="col-12 text-primary">
             <div
               class="link"
@@ -75,7 +75,7 @@
         >
           {{ 'links.change' | translate }}
         </div>
-        <div class="row no-gutters pb-1">
+        <div class="row g-0 pb-1">
           <div
             class="col text-danger text-bold my-1"
             data-id="adminLinkWarning"
@@ -83,7 +83,7 @@
             {{ 'links.loosingLink' | translate }}
           </div>
         </div>
-        <div class="row no-gutters link-container justify-content align-items-center px-2 py-1">
+        <div class="row g-0 link-container justify-content align-items-center px-2 py-1">
           <div class="col-12 text-primary">
             <div
               class="link"
