--- a/src/app/poll/mobile-poll-table.component.html
+++ b/src/app/poll/mobile-poll-table.component.html
@@ -1,6 +1,6 @@
 <div class="container">
   <div *ngIf="formHelper.pollForm && formHelper.appointment" [formGroup]="formHelper.pollForm"
-       class="row no-gutters toolbar d-lg-none p-1">
+       class="row g-0 toolbar d-lg-none p-1">
     <!-- add button ^ dropdown & edit button (only visible when _not_ in add or edit mode) -->
     <ng-container *ngIf="!formHelper.hasAddOrEditParticipantForm()">
       <div class="col-auto mx-1">
@@ -101,7 +101,7 @@
           <ng-container
             *ngFor="let voting of formHelper.getParticipantFormVotings().controls; index as j"
             [formGroup]="formHelper.castToFormGroup(voting)"
-            class="row no-gutters justify-content-around align-items-center align-self-center">
+            class="row g-0 justify-content-around align-items-center align-self-center">
             <ng-container *ngIf="formHelper.isVotingFromSuggestedDate(date, voting)">
               <app-poll-options
                 [formGroup]="formHelper.castToFormGroup(voting)"
