--- a/src/app/shared/components/stepper/stepper.component.html
+++ b/src/app/shared/components/stepper/stepper.component.html
@@ -3,9 +3,9 @@
     {{ 'navigation.step' | translate }} {{currentStep + 1}}/{{steps.length}}
   </p>
 </div>
-<div class="row justify-content-center no-gutters mb-4">
+<div class="row justify-content-center g-0 mb-4">
   <div *ngFor="let step of steps; index as i" class="col-auto">
-    <div class="row no-gutters align-items-center">
+    <div class="row g-0 align-items-center">
       <div class="col-auto p-0">
         <div [ngClass]="{'circle-active': step===currentStep}" class="circle"></div>
       </div>
