--- a/src/app/shared/components/suggested-date/suggested-date.component.html
+++ b/src/app/shared/components/suggested-date/suggested-date.component.html
@@ -1,4 +1,4 @@
-<div class="row no-gutters justify-content-center text-center suggested-date-container">
+<div class="row g-0 justify-content-center text-center suggested-date-container">
   <!-- column on the left or centered with start date and - for desktop resolutions - start and end time  -->
   <div class="col-5 column">
     <!-- start date -->
@@ -25,7 +25,7 @@
       <div class="ml-1 mr-2 d-inline-block date-time-divider"></div>
     </div>
     <div class="col d-flex d-lg-none column">
-      <div class="row no-gutters align-self-center w-100">
+      <div class="row g-0 align-self-center w-100">
         <div class="col">
           <div>{{date.startTime | date:'HH:mm': '': getLocale()}}</div>
         </div>
